# OCR_project_5-api

./: Dockerfile  index.html  pyproject.toml  server.py
api/: main.py  models.py
api/nlp/: __init__.py  predict.py  preprocess.py
api/nlp/models/: lda_model.pkl
tests/: test_predict.py  test_preprocess.py
